--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,9 +10,8 @@
                     <div id="login-box-label">
                         <h2>Login</h2>
                         <div class="forms">
-                            
-                            
-                            <form action='@Url.Action("Index" , "Home")' method="POST">
+                    
+                            <form action='@Url.Action("FazerLogin" , "Cadastro")' method="POST">
                                 <input type="email" name="email" placeholder="E-mail">
                                 <br />
                                 <input type="password" name="senha" id="password" placeholder="Senha">
